fix: Fixes appConfig yaml and requested memory for toolbox
Signed-off-by: Ricardo Verhaeg <rverhaeg@gmail.com>

--- a/config/appConfig.yml
+++ b/config/appConfig.yml
@@ -34,7 +34,7 @@ object_store:
   proxy_download: true
   storage_options: {}
   connection:
-    key: ${gcs_connection_secret}
+    secret: ${gcs_connection_secret}
 
 lfs:
   enabled: true
