feat: Updates Gitlab version and adds GCS cache for runner
Signed-off-by: Ricardo Verhaeg <rverhaeg@gmail.com>

--- a/config/runners.toml
+++ b/config/runners.toml
@@ -1,4 +1,8 @@
 [[runners]]
+  [runners.cache]
+    Type = "${cache_type}"
+    [runners.cache.gcs]
+      BucketName = "${cache_bucket}"
   [runners.kubernetes]
     image = "ubuntu:18.04"
     ephemeral_storage_limit = "5Gi"
